--- a/src/app/product/product-category/product-category.component.css
+++ b/src/app/product/product-category/product-category.component.css
@@ -5,7 +5,7 @@
   border-bottom: 0px;
 }
 
-.container .card-body:not(.highlight-card):hover {
+.card-body:not(.highlight-card):hover {
   transform: translateY(-3px);
   box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
 }
