Remove shop from clothing and add categories to menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,10 @@
             <a class="nav-link" [routerLink]="['/home']">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="product-list.html">Shop</a>
+            <a class="nav-link" href="#">Clothing</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Jewellery</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="about-us.html">About us</a>
