Dynamically build different product list depending on the category

--- a/src/app/product/product-category.component.html
+++ b/src/app/product/product-category.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title"></h1>
-        <a href="clothing.html">
+        <a [routerLink]="['/products', 'clothing']" >
           <img src="../../assets/images/clothing.jpg" width="150px" height="200px"/>
         </a>
       </div>
@@ -19,7 +19,7 @@
       </div>
       <div class="card-body">
         <h1 class="card-title pricing-card-title"></h1>
-        <a href="jewellery.html">
+        <a [routerLink]="['/products', 'jewellery']" >
           <img src="../../assets/images/jewellery.jpg" width="150px" height="200px"/>
         </a>
       </div>
