--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,14 @@
   padding: 0px 15px;
 }
 
+.card-header {
+  padding: .75rem 1.25rem;
+  margin-bottom: 0;
+  background-color: rgba(0, 0, 0, .03);
+  border-bottom: 0px;
+}
+
+.card-body:not(.highlight-card):hover {
+  transform: translateY(-3px);
+  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+}
