--- a/src/app/product/product-category/product-category.component.html
+++ b/src/app/product/product-category/product-category.component.html
@@ -7,7 +7,7 @@
       <div class="card-body">
         <h1 class="card-title pricing-card-title"></h1>
         <a [routerLink]="['/products', 'clothing']" >
-          <img src="../../assets/images/clothing.jpg" width="150px" height="200px"/>
+          <img src="../../../assets/images/clothing.jpg" width="150px" height="200px"/>
         </a>
       </div>
     </div>
@@ -20,7 +20,7 @@
       <div class="card-body">
         <h1 class="card-title pricing-card-title"></h1>
         <a [routerLink]="['/products', 'jewellery']" >
-          <img src="../../assets/images/jewellery.jpg" width="150px" height="200px"/>
+          <img src="../../../assets/images/jewellery.jpg" width="150px" height="200px"/>
         </a>
       </div>
     </div>
@@ -33,7 +33,7 @@
       <div class="card-body">
         <h1 class="card-title pricing-card-title"></h1>
         <a href="other.html">
-          <img src="../../assets/images/other.jpg" width="150px" height="200px"/>
+          <img src="../../../assets/images/other.jpg" width="150px" height="200px"/>
         </a>
       </div>
     </div>
