--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,18 @@
   padding: 0px 15px;
 }
 
+.card {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0,0,0,.125);
+  border-radius: .25rem;
+}
+
 .card-header {
   padding: .75rem 1.25rem;
   margin-bottom: 0;
@@ -16,7 +28,14 @@
   border-bottom: 0px;
 }
 
-.card-body:not(.highlight-card):hover {
+.card-footer {
+  padding: .75rem 1.25rem;
+  background-color: rgba(0,0,0,.03);
+  border-top: 0px;
+}
+
+.card:not(.highlight-card):hover {
   transform: translateY(-3px);
   box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  border: 1px solid rgba(0,0,0,.250);
 }
