Add new images and add styling for video

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -7,28 +7,26 @@
       <div id="mdb-lightbox-ui"></div>
 
       <div class="mdb-lightbox">
-
         <div class="row product-gallery mx-1">
           <div class="col-12 mb-0">
             <ngb-carousel #productCarousel>
               <ng-template ngbSlide id="slideOne">
                 <figure class="figure">
-                  <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Vertical/15a.jpg"
+                  <img src="./assets/images/pc-peacock-necklace-1.jpg"
                        class="figure-img img-fluid rounded"
                        alt="A generic square placeholder image with rounded corners in a figure.">
-                  <figcaption class="figure-caption">A caption for the above image.</figcaption>
                 </figure>
               </ng-template>
               <ng-template ngbSlide id="slideTwo">
                 <figure class="figure">
-                  <img src="./assets/images/pc-necklace.jpg"
+                  <img src="./assets/images/pc-peacock-necklace-2.jpg"
                        class="figure-img img-fluid rounded"
                        alt="A generic square placeholder image with rounded corners in a figure.">
                 </figure>
               </ng-template>
               <ng-template ngbSlide id="slideThree">
                 <video class="video-fluid" id="123" controls muted>
-                  <source src="./assets/video.mp4" poster="assets/images/earing.png" type="video/mp4">
+                  <source src="./assets/videos/pc-peacock-necklace.mp4" poster="assets/images/earing.png" type="video/mp4">
                 </video>
 
                 <!--<figure class="figure">
