Product Information Added

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -139,24 +139,23 @@
       <h5>Fantasy T-shirt</h5>
       <p class="mb-2 text-muted text-uppercase small">Shirts</p>
 
-      <p><span class="mr-1"><strong>$12.99</strong></span></p>
-      <p class="pt-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, sapiente illo. Sit
-        error voluptas repellat rerum quidem, soluta enim perferendis voluptates laboriosam. Distinctio,
-        officia quis dolore quos sapiente tempore alias.</p>
+      <p><span class="mr-1"><strong>£15.00</strong></span></p>
+      <h6>Description</h6>
+      <p class="pt-1">A  gold necklace set featuring a gold and ruby peacock design with dangling pearls produced by Prabha's Collections</p>
       <div class="table-responsive">
         <table class="table table-sm table-borderless mb-0">
           <tbody>
           <tr>
             <th class="pl-0 w-25" scope="row"><strong>Model</strong></th>
-            <td>Shirt 5407X</td>
+            <td>Gold & Ruby Peacock Necklace</td>
           </tr>
           <tr>
             <th class="pl-0 w-25" scope="row"><strong>Color</strong></th>
-            <td>Black</td>
+            <td>Gold & Ruby</td>
           </tr>
           <tr>
             <th class="pl-0 w-25" scope="row"><strong>Delivery</strong></th>
-            <td>USA, Europe</td>
+            <td>United Kingdom (🇬🇧)</td>
           </tr>
           </tbody>
         </table>
@@ -205,7 +204,7 @@
       </div>
       <button type="button" class="btn btn-primary btn-md mr-1 mb-2">Buy now</button>
       <button type="button" class="btn btn-light btn-md mr-1 mb-2"><i
-        class="fas fa-shopping-cart pr-2"></i>Add to cart
+        class="#"></i>🛒 Add to cart
       </button>
     </div>
   </div>
